Fixing z-index issue when Modal is visible

--- a/app/client/src/components/addButton/addButton.module.css
+++ b/app/client/src/components/addButton/addButton.module.css
@@ -9,4 +9,5 @@
   height: 35px;
   width: 180px;
   font-size: 20px;
+  z-index: 0;
 }
