--- a/app/client/src/components/register/register.module.css
+++ b/app/client/src/components/register/register.module.css
@@ -8,6 +8,7 @@
 
 .button {
   margin: 5px;
+  z-index: 0;
 }
 
 .category {
