--- a/app/client/src/components/yearMonthFilter/yearMonthFilter.module.css
+++ b/app/client/src/components/yearMonthFilter/yearMonthFilter.module.css
@@ -9,4 +9,5 @@
   font-weight: bold;
   margin-left: 20px;
   margin-right: 20px;
+  z-index: 0;
 }
